--- a/Frontend/src/static/css/listaUsuario.css
+++ b/Frontend/src/static/css/listaUsuario.css
@@ -55,3 +55,13 @@ body {
     width: 100%; 
     margin: 10px 0;
 }
+/*Boton de agregar usuario*/
+.btn-secondary{
+    background-color:rgba(227, 227, 227, 1);
+    border: rgba(227, 227, 227, 1);
+    color: black;
+    box-shadow: 1px 2px 5px rgba(45, 45, 45, 0.725) ;
+}
+.bi-filetype-pdf{
+    width: 30px;
+}
